# design_pattern

./: .gitignore  README.md  composite.py  pyproject.toml
design_pattern/: adapter_extend.py  adapter_transfer.py  bridge.py  builder.py  decorator.py  factory_concrete.py  factory_framework.py  iterator.py  prototype.py  singleton_sample.py  singletone.py  strategy.py  template.py  test.html  visitor.py
design_pattern/abstract_factory/: LinkPage.html  abstract_facotry.py  abstract_factory.py  client.py  factory.py
tests/: test_design_pattern.py
